<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>

    <string name="hello">Choose one of the features below.</string>
    <string name="app_name">mafundis</string>
    <string name="description_logo">Demo</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Electronics</string>
    <string name="title_feature2">Mechanics</string>
    <string name="title_feature3">Electricians</string>
    <string name="title_feature4">Plumbers</string>
    <string name="title_feature5">Cable TV</string>
    <string name="text_hint">quick search</string>
    <string name="title_feature6">HouseRepair</string>
    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>
    <string name="about_intro">This app is a demo to show you how to do an Android app based on the Dashboard pattern that has been used in apps like Twitter, Google IO, and Evernote.</string>
    <string name="search_intro">Content for the Search page goes here.</string>

    <!-- empty search results -->
    <string name="search_no_results">Sorry, No results found.</string>
    <string name="title_activity_company">Company</string>
    <string name="hello_world">Hello world!</string>

    <!-- company details -->
    <string name="lbl_company_name">Takasafi Cleaners</string>
    <string name="lbl_company_location">Upper Hill, Nairobi KE</string>
    <string name="lbl_btn_contact">Contact</string>
    <string name="lbl_btn_reviews">Reviews</string>
    <string name="lbl_btn_company_reviews">Company Reviews</string>
    <string name="lbl_services">Services Offered</string>

    <!-- contact company -->
    <string name="title_activity_contact_company">Contact Company</string>
    <string name="lbl_project_name">Subject</string>
    <string name="hint_contact_msg">Message</string>
    <string name="lbl_submit">Submit</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_create_review">Review</string>

</resources>