<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <!-- section AB -->

    <LinearLayout
        android:id="@+id/section_AB"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background1"
        android:orientation="vertical" >

        <LinearLayout style="@style/TitleBar" >

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_home"
                android:onClick="onClickHome"
                android:src="@drawable/title_home" />

            <ImageView style="@style/TitleBarSeparator" />

            <TextView style="@style/TitleBarText" />

            <ImageButton
                android:id="@+id/btn_login_logout"
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_about"
                android:onClick="onClickLoginLogout"
                android:src="@drawable/ic_login" />

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_about"
                android:onClick="onClickAbout"
                android:src="@drawable/title_about" />

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_search"
                android:onClick="onClickSearch"
                android:src="@drawable/title_search" />
        </LinearLayout>
    </LinearLayout>

    <!-- content section -->

    <RelativeLayout
        android:id="@+id/section_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/section_AB"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="3dp" >

        <LinearLayout
            android:id="@+id/section_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_profpic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/car_repair" />

            <TextView
                android:id="@+id/txt_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_company_name"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_company_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_company_location"
                android:textSize="15sp" />

            <RatingBar
                android:id="@+id/rb_ratings"
                style="?android:ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:isIndicator="true"
                android:max="5"
                android:numStars="5"
                android:rating="3"
                android:stepSize="0.0" />
        </LinearLayout>

        <!-- section bottom -->

        <RelativeLayout
            android:id="@+id/section_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <Button
                android:id="@+id/btn_contact"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="5dp"
                android:text="@string/lbl_btn_contact" />

            <Button
                android:id="@+id/btn_reviews"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:text="@string/lbl_btn_reviews" />
        </RelativeLayout>

        <!-- section services -->

        <LinearLayout
            android:id="@+id/section_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/section_bottom"
            android:layout_below="@id/section_top"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_services"
                android:textSize="15sp" />

            <ListView
                android:id="@+id/servicesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <!-- reviews section -->

    <RelativeLayout
        android:id="@+id/section_reviews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/section_AB"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="3dp"
        android:visibility="gone" >
        

        <ListView
            android:id="@+id/reviewsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice" />
    </RelativeLayout>

</RelativeLayout>