<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/top_section"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background1"
        android:orientation="vertical" >

        <LinearLayout style="@style/TitleBar" >

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_home"
                android:onClick="onClickHome"
                android:src="@drawable/title_home" />

            <ImageView style="@style/TitleBarSeparator" />

            <TextView style="@style/TitleBarText" />

            <ImageButton
                android:id="@+id/btn_login_logout"
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_about"
                android:onClick="onClickLoginLogout"
                android:src="@drawable/ic_login" />

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_about"
                android:onClick="onClickAbout"
                android:src="@drawable/title_about" />

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_search"
                android:onClick="onClickSearch"
                android:src="@drawable/title_search" />
        </LinearLayout>
    </LinearLayout>
    
    <!-- search bar -->
    <LinearLayout
        android:id="@+id/search_bar"
        android:visibility="gone"
        android:layout_below="@id/top_section"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <EditText
            android:id="@+id/edt_search"
            android:hint="search"
            android:inputType="text"
            android:layout_weight=".9"
            android:layout_width="0dp"
            android:layout_height="match_parent" 
            />
        
        <Button
            android:id="@+id/btn_search"
            android:text="Search"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
            
        
    </LinearLayout>

    <!-- search results list item -->

    <ListView
        android:id="@+id/searchResultsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_bar"
        android:choiceMode="singleChoice" />

    <!-- loading progress -->

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <!-- empty search results -->

    <TextView
        android:id="@+id/empty_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/search_no_results"
        android:textSize="20sp"
        android:visibility="gone" />

</RelativeLayout>