<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <!-- section AB -->

    <LinearLayout
        android:id="@+id/section_AB"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background1"
        android:orientation="vertical" >

        <LinearLayout style="@style/TitleBar" >

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_home"
                android:onClick="onClickHome"
                android:src="@drawable/title_home" />

            <ImageView style="@style/TitleBarSeparator" />

            <TextView style="@style/TitleBarText" />

            <ImageButton
                android:id="@+id/btn_login_logout"
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_about"
                android:onClick="onClickLoginLogout"
                android:src="@drawable/ic_login" />

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_about"
                android:onClick="onClickAbout"
                android:src="@drawable/title_about" />

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_search"
                android:onClick="onClickSearch"
                android:src="@drawable/title_search" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="50dp" >

        <EditText
            android:id="@+id/text_su_email"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:drawableLeft="@drawable/ic_email"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/text_su_username"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_user"
            android:ems="10"
            android:hint="Username"
            android:singleLine="true" />

        <EditText
            android:id="@+id/text_su_password1"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_password"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_su_sign_up"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_ok"
            android:text="Sign Up" />
    </LinearLayout>

</RelativeLayout>