<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <!-- section AB -->

    <LinearLayout
        android:id="@+id/section_AB"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background1"
        android:orientation="vertical" >

        <LinearLayout style="@style/TitleBar" >

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_home"
                android:onClick="onClickHome"
                android:src="@drawable/title_home" />

            <ImageView style="@style/TitleBarSeparator" />

            <TextView style="@style/TitleBarText" />

            <ImageButton
                android:id="@+id/btn_login_logout"
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_about"
                android:onClick="onClickLoginLogout"
                android:src="@drawable/ic_login" />

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_about"
                android:onClick="onClickAbout"
                android:src="@drawable/title_about" />

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_search"
                android:onClick="onClickSearch"
                android:src="@drawable/title_search" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="70dp"
        tools:context=".Login" >

        <EditText
            android:id="@+id/edit_login_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:drawableLeft="@drawable/ic_user"
            android:hint="Email Address"
            android:inputType="textEmailAddress"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edit_login_phone"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_password"
            android:hint="Phone Number"
            android:inputType="phone"
            android:singleLine="true" />

        <TextView
            android:id="@+id/txt_login_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="Invalid login credentials!"
            android:textColor="#FF0000"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_login_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight=".2"
                android:drawableLeft="@drawable/ic_cancel"
                android:text="Cancel" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2" />

            <Button
                android:id="@+id/btn_login_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight=".2"
                android:drawableLeft="@drawable/ic_ok"
                android:text="Login" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:clickable="true"
            android:text="Dont Have an Account? Sign Up."
            android:textColor="#ff4d90fe"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>